--- a/play.html
+++ b/play.html
@@ -49,7 +49,9 @@ canvas {
         </div>
     </section>
 </article>
-<div id=""></div>
+<div id="hack_link">
+    
+</div>
 </div>
     <script type="text/javascript">
     function getParameterByName(name) {
@@ -66,6 +68,7 @@ canvas {
             console.log("No ID specified in URL.")
             return;
         }
+        $("#hack_link").append("<a href='http://jonbro.tk/mlged/index.html?p="+id+"'>HACK</a>");
         $.ajax('https://api.github.com/gists/'+id, {
             type: 'GET',
         }).done(function(data){
