--- a/play.html
+++ b/play.html
@@ -49,9 +49,7 @@ canvas {
         </div>
     </section>
 </article>
-<div id="hack_link">
-    
-</div>
+<div id="hacklink"></div>
 </div>
     <script type="text/javascript">
     function getParameterByName(name) {
@@ -68,7 +66,7 @@ canvas {
             console.log("No ID specified in URL.")
             return;
         }
-        $("#hack_link").append("<a href='http://jonbro.tk/mlged/index.html?p="+id+"'>HACK</a>");
+        $("#hacklink").append("<a href='http://jonbro.tk/mlged/index.html?p="+id+"'>HACK</a>");
         $.ajax('https://api.github.com/gists/'+id, {
             type: 'GET',
         }).done(function(data){
