--- a/play.html
+++ b/play.html
@@ -66,7 +66,7 @@ canvas {
             console.log("No ID specified in URL.")
             return;
         }
-        $("#hacklink").append("<a href='http://jonbro.tk/mlged/index.html?p="+id+"'>HACK</a>");
+        $("#hacklink").append("<a href='http://jonbro.tk/mlged/index.html?hack="+id+"'>HACK</a>");
         $.ajax('https://api.github.com/gists/'+id, {
             type: 'GET',
         }).done(function(data){
