--- a/index.html
+++ b/index.html
@@ -33,43 +33,11 @@
     &nbsp;&nbsp;&nbsp;<a href="index.html"><h2>MGLScript</h2></a>
     <a id="saveClickLink" href="javascript:void(0);">SAVE</a>
     <form action="" style="display:inline;">
-        <select id="loadDropDown" name="default" style="display:inline; width:100px"> - </select>
-    </form> - 
-    <form action="" style="display:inline;">
-        <select  id="exampleDropdown"  name="default" style="display:inline; width:150px">
-            <option value="sokoban_basic">Load Example</option>
-            <optgroup label="Tutorial">
-            <option value="sokoban_basic">Basic</option>
-            <option value="sokoban_eyeball">Eyeball</option>
-            <option value="sokoban_match3">Match 3</option>
-            <option value="randomrobots">Random Robots</option>
-            <option value="randomspawner">Random Robot Spawner</option>
-            </optgroup>
-            <optgroup label="Elementary">
-            <option value="blockfaker">Block Faker (Droqen)</option>
-            <option value="byyourside">By Your Side (Draknek)</option>
-            <option value="kettle">Kettle (increpare)</option>
-            <option value="microban">Microban (D. Skinner)</option>
-            <option value="nekopuzzle">Neko Puzzle (Lexaloffle)</option>
-            <option value="notsnake">Notsnake (Terry Cavanagh)</option>
-            <option value="zenpuzzlegarden">Zen Puzzle Garden (Lexaloffle)</option>
-            </optgroup>
-            <optgroup label="Intermediate">
-            <option value="limerick">Lime Rick (kissmaj7)</option>
-            <option value="octat">Octat (increpare)</option>
-            <option value="constellationz">Constellation Z (increpare)</option>
-            </optgroup>
-            <optgroup label="Advanced">
-            <option value="midas">Midas (Wanderlands)</option>
-            <option value="whaleworld">2D Whale World (increpare)</option>
-            <option value="blank">Blank Project</option>
-            </optgroup>
+        <select id="loadDropDown" name="default" style="display:inline; width:100px">
         </select>
-    </form>-
+    </form> - 
     <a id="runClickLink">RUN</a>
-    <a id="rebuildClickLink" href="javascript:void('Rebuild without restarting');">REBUILD</a>
     <a id="shareClickLink" href="javascript:void('Generate Link To Game');">SHARE</a>
-    <a href="Documentation/documentation.html"  target="Puzzle_Script_Documentation">DOCS</a>
 </div>
 <div id="righttophalf"> 
     <div class="upperarea">
