--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./css/docs.css">
     <link rel="stylesheet" href="./css/layout.css"> 
     <link rel="stylesheet" href="./css/codemirror.css"> 
+    <link rel="stylesheet" href="./css/paraiso-dark.css"> 
 </head>
 <body>
 <div id="leftpanel">
@@ -38,6 +39,7 @@
     </form> - 
     <a id="runClickLink">RUN</a>
     <a id="shareClickLink" href="javascript:void('Generate Link To Game');">SHARE</a>
+    <a target="_blank" href="https://github.com/abagames/mgl.coffee">DOCS</a>
 </div>
 <div id="righttophalf"> 
     <div class="upperarea">
