--- a/play.html
+++ b/play.html
@@ -47,6 +47,8 @@ canvas {
         <div style="width:100%;max-width:480px" id="displayDiv">
             <canvas id="display"></canvas>
         </div>
+        <div id="leaderboard">
+        </div>
     </section>
 </article>
 <div id="hacklink"></div>
@@ -60,6 +62,12 @@ canvas {
     }
     
     $(function(){
+        // to store scores on the leaderboard
+        /*
+        var scoreboardWindow = $("#leaderboard iframe")[0].contentWindow;
+        scoreboardWindow.postMessage(["addScore", 'thoaeuoaetnuh', 190], "*");
+        */
+
         // load the game from gist
         var id = getParameterByName("p").replace(/[\\\/]/,"");
         if (id===null||id.length===0) {
@@ -72,6 +80,9 @@ canvas {
         }).done(function(data){
             CoffeeScript.eval(data.files['script.coffee'].content, {sandbox:true, sourceMap:true, filename:"none"});
             Game.initialize();
+            // if the game requested a leaderboard, then attach it
+            $("#leaderboard").append('<iframe src="http://mgled-leaderboard.meteor.com/?id='+id+'">');
+
         });
     });
     </script>
