fixed link to the player page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 <div id="righttophalf"> 
     <div class="upperarea">
-        <div style="width:100%;max-width:480px" id="displayDiv">
+        <div style="width:100%;max-width:480px;" id="displayDiv">
             <canvas id="display"></canvas>
         </div>
     </div>
