--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <script src="./libs/codemirror.js"></script>
     <script src="./libs/coffeescript_mode.js"></script>
     <script src="./editor.js"></script>
+
     <link rel="stylesheet" href="./css/docs.css">
     <link rel="stylesheet" href="./css/layout.css"> 
     <link rel="stylesheet" href="./css/codemirror.css"> 
     <link rel="stylesheet" href="./css/paraiso-dark.css"> 
     <link rel="stylesheet" href="./css/solarized.css"> 
+
 </head>
 <body>
 <div id="leftpanel">
@@ -35,9 +37,9 @@
     &nbsp;&nbsp;&nbsp;<a href="index.html"><h2>MGLScript</h2></a>
     <a id="saveClickLink" href="javascript:void(0);">SAVE</a>
     <form action="" style="display:inline;">
-        <select id="loadDropDown" name="default" style="display:inline; width:100px">
+        <select id="loadDropDown" name="default" style="display:inline;">
         </select>
-    </form> - 
+    </form>
     <a id="runClickLink">RUN</a>
     <a id="shareClickLink" href="javascript:void('Generate Link To Game');">SHARE</a>
     <a target="_blank" href="https://github.com/abagames/mgl.coffee">DOCS</a>
