--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <select id="loadDropDown" name="default" style="display:inline;">
         </select>
     </form>
+    <form action="" style="display:inline;">
+        <select id="exampleDropDown" name="default" style="display:inline;width:150px">
+            <option>Load Example</option>
+        </select>
+    </form>
     <a id="runClickLink">RUN</a>
     <a id="shareClickLink" href="javascript:void('Generate Link To Game');">SHARE</a>
     <a target="_blank" href="https://github.com/abagames/mgl.coffee">DOCS</a>
