added in the css define for the theme I like

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./css/layout.css"> 
     <link rel="stylesheet" href="./css/codemirror.css"> 
     <link rel="stylesheet" href="./css/paraiso-dark.css"> 
-    <link rel="stylesheet" href="./css/zenburn.css"> 
+    <link rel="stylesheet" href="./css/solarized.css"> 
 
 </head>
 <body>
