tweaked the display pages put in a stub for the realtime leaderboard so kenta's games work

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>MGLScript</title>
+    <meta charset="utf-8"/>
+    <title>MGLEd</title>
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="./css/index.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <script src="./libs/jquery-2.1.1.min.js"></script>
-    <script src="./libs/stacktrace.js"></script>
-    <script src="./libs/source-map.min.js"></script>
     <script src="./libs/audio.js"></script>
     <script src="./libs/jsfx.js"></script>
     <script src="./libs/jsfxlib.js"></script>
@@ -16,61 +20,13 @@
     <script src="./libs/b64.js"></script>
     <script src="./libs/mgl.js"></script>
     <script src="./libs/coffee-script.js"></script>
-    <script src="./libs/codemirror.js"></script>
-    <script src="./libs/coffeescript_mode.js"></script>
-    <script src="./editor.js"></script>
-
-    <link rel="stylesheet" href="./css/docs.css">
-    <link rel="stylesheet" href="./css/layout.css"> 
-    <link rel="stylesheet" href="./css/codemirror.css"> 
-    <link rel="stylesheet" href="./css/paraiso-dark.css"> 
-    <link rel="stylesheet" href="./css/solarized.css"> 
-
 </head>
 <body>
-<div id="leftpanel">
-<textarea id="code">
-</textarea>
+<div class="main">
+<h1>MGLEd</h1>
+<p>MGLEd is a tiny game editor, for making small games really fast.</p> 
+<p>It is based on a library called <a href="https://github.com/abagames/mgl.coffee">MGL.coffee</a>, by Kenta Cho.</p>
+<p><a href="https://github.com/abagames/mgl.coffee">You can check out a tutorial for making a game with it at the github page</a>, and just dive right into <a href="./edit.html">the editor and start working with it.</a></p>
 </div>
-<div id="verticaldragbar"></div>
-<div id="uppertoolbar">
-    &nbsp;&nbsp;&nbsp;<a href="index.html"><h2>MGLScript</h2></a>
-    <a id="saveClickLink" href="javascript:void(0);">SAVE</a>
-    <form action="" style="display:inline;">
-        <select id="loadDropDown" name="default" style="display:inline;">
-        </select>
-    </form>
-    <form action="" style="display:inline;">
-        <select id="exampleDropDown" name="default" style="display:inline;width:150px">
-            <option>Load Example</option>
-        </select>
-    </form>
-    <a id="runClickLink">RUN</a>
-    <a id="shareClickLink" href="javascript:void('Generate Link To Game');">SHARE</a>
-    <a target="_blank" href="https://github.com/abagames/mgl.coffee">DOCS</a>
-</div>
-<div id="righttophalf"> 
-    <div class="upperarea">
-        <div style="width:100%;max-width:480px;margin:auto;text-align:center;" id="displayDiv">
-            <canvas id="display"></canvas>
-        </div>
-    </div>
-</div>
-<div id="horizontaldragbar"></div>
-<div id="rightbottomhalf">
-    <div class="lowertoolbar">
-        <div id="soundbar">
-        </div>
-    </div>
-    <div class="lowerarea" id="lowerarea">
-        <div id = "consoletextarea" >
-=================================<br>
-&nbsp;&nbsp;&nbsp;Log<br>
-=================================<br>
-        </div>
-    </div>
-</div>
-    <script src="./libs/layout.js"></script>
-    <script src="./libs/addlisteners_editor.js"></script>
-
 </body>
+</html>
