--- a/play.html
+++ b/play.html
@@ -6,31 +6,8 @@
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <style type="text/css">
-    <!--
-body {
-    background-color: #edc;
-    color: #000;
-    width: 100%; max-width: 800px;
-    margin: 0 auto 0 auto;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-canvas {
-    width: 100%;
-    background-color: #000;
-}
-iframe{
-    border:none;
-    height:480px;
-}
-    -->
-    </style>
+    <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="./css/index.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <script src="./libs/jquery-2.1.1.min.js"></script>
     <script src="./libs/audio.js"></script>
@@ -48,13 +25,15 @@ iframe{
 <div class="main">
 <article>
     <section>
-        <div style="width:480px;max-width:480px;float:left" id="displayDiv">
+        <div style="width:480px;max-width:480px;" id="displayDiv">
             <canvas id="display"></canvas>
         </div>
         <div id="leaderboard" style="float:right;height:480px;border:none"></div>
     </section>
 </article>
-<div id="hacklink"></div>
+<div id="bottom"><div id="madewith"><a href="./index.html">MGLEd</a></div>  |  <div id="hacklink"></div></div>
+
+
 </div>
     <script type="text/javascript">
     var id;
@@ -79,7 +58,7 @@ iframe{
             console.log("No ID specified in URL.")
             return;
         }
-        // $("#hacklink").append("<a href='http://jonbro.tk/mgled/index.html?hack="+id+"'>HACK</a>");
+        $("#hacklink").append("<a href='http://mgled.neocities.org/edit.html?hack="+id+"'>HACK</a>");
         $.ajax('https://api.github.com/gists/'+id, {
             type: 'GET',
         }).done(function(data){
