--- a/edit.html
+++ b/edit.html
@@ -40,12 +40,12 @@
         <select id="loadDropDown" name="default" style="display:inline;">
         </select>
     </form>
-    <form action="" style="display:inline;">
+<!--     <form action="" style="display:inline;">
         <select id="exampleDropDown" name="default" style="display:inline;width:150px">
             <option>Load Example</option>
         </select>
     </form>
-    <a id="runClickLink">RUN</a>
+ -->    <a id="runClickLink">RUN</a>
     <a id="shareClickLink" href="javascript:void('Generate Link To Game');">SHARE</a>
     <a target="_blank" href="https://github.com/abagames/mgl.coffee">DOCS</a>
 </div>
@@ -72,5 +72,14 @@
 </div>
     <script src="./libs/layout.js"></script>
     <script src="./libs/addlisteners_editor.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-251531-12', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
