--- a/index.html
+++ b/index.html
@@ -28,5 +28,15 @@
 <p>It is based on a library called <a href="https://github.com/abagames/mgl.coffee">MGL.coffee</a>, by Kenta Cho.</p>
 <p><a href="https://github.com/abagames/mgl.coffee">You can check out a tutorial for making a game with it at the github page</a>, and just dive right into <a href="./edit.html">the editor and start working with it.</a></p>
 </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-251531-12', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
