fixed up some of the functions to be more the expected way

--- a/edit.html
+++ b/edit.html
@@ -15,12 +15,16 @@
     <script src="./libs/GIFEncoder.js"></script>
     <script src="./libs/b64.js"></script>
     <script src="./libs/mgl.js"></script>
+    <script src="./libs/KeyCode.js"></script>
     <script src="./libs/coffee-script.js"></script>
     <script src="./libs/codemirror.js"></script>
     <script src="./libs/coffeescript_mode.js"></script>
+    <script src="./libs/show-hint.js"></script>
+    <script src="./libs/javascript-hint.js"></script>
     <script src="./editor.js"></script>
 
     <link rel="stylesheet" href="./css/docs.css">
+    <link rel="stylesheet" href="./css/show-hint.css">
     <link rel="stylesheet" href="./css/layout.css"> 
     <link rel="stylesheet" href="./css/codemirror.css"> 
     <link rel="stylesheet" href="./css/paraiso-dark.css"> 
