--- a/play.html
+++ b/play.html
@@ -18,6 +18,7 @@
     <script src="./libs/NeuQuant.js"></script>
     <script src="./libs/GIFEncoder.js"></script>
     <script src="./libs/b64.js"></script>
+    <script src="./libs/KeyCode.js"></script>
     <script src="./libs/mgl.js"></script>
     <script src="./libs/coffee-script.js"></script>
 </head>
